--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -21,12 +21,11 @@ jobs:
       with:
         java-version: 11
     
-    - name: Grant Gradlew Execute Permission
+    - name: Grant Gradlew Permissions
       run: chmod +x gradlew
-
-      
-    - name: Publish with Gradle
-      run: ./gradlew publish
+    
+    - name: Build with Gradle
+      run: ./gradlew build
     
     - name: Create Release
       id: create_release
