--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -32,16 +32,19 @@ jobs:
     - name: Create Release
       id: create_release
       uses: actions/create-release@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        tag_name: build-${{ github.run_number }}
-        release_name: Release ${{ env.projectVersion }} build-${{ github.run_number }}
-        body: ${{ join(github.event.commits.*.message, ' || ') }}
-
+        tag_name: ${{ env.build }}
+        release_name: Release ${{ env.build }}
+    
     - name: Upload Release Asset
-      id: upload-release-asset
+      id: upload-release-asset 
       uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: build/libs/${{ env.projectName }}-${{ env.projectVersion }}.jar
-        asset_name: ${{ env.projectName }}.jar
+        asset_path: ${{ env.path }}
+        asset_name: ${{ env.name }}
         asset_content_type: application/java-archive
