--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -21,10 +21,9 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Set up JDK 17
-      uses: actions/setup-java@v4
+      uses: actions/setup-java@v1
       with:
-        distribution: 'oracle' # See 'Supported distributions' for available options
-        java-version: '17'
+        java-version: 11
             
     # - name: Cache NMS
     #   id: cache-nms
